cmake_minimum_required(VERSION 2.8)
project(hidrun C)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release." FORCE)
endif (NOT CMAKE_BUILD_TYPE)
if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
    set(CMAKE_C_FLAGS "-Os -pipe -Wall -Wextra -fmerge-all-constants -fno-asynchronous-unwind-tables -Wl,--gc-sections,--build-id=none -nostartfiles -mwindows")
    set(CMAKE_C_FLAGS_DEBUG "-g")
    set(CMAKE_C_FLAGS_RELEASE "-s")
    if (WIN32 AND LGPL)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nostartfiles")
    endif ()
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_C_FLAGS}")
endif ()

add_executable(hidrun hidrun.c winmain.h)
target_link_libraries(hidrun shlwapi)
add_executable(hidrunwait hidrunwait.c winmain.h)
target_link_libraries(hidrunwait shlwapi)
